[package]
name = "mikack-ffi"
version = "0.1.0"
authors = ["Hentioe <me@bluerain.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mikack = { git = "https://github.com/Hentioe/mikack", branch = "master" }
libc = "0.2.67"
openssl-sys = { version = "0.9.54", features = ["vendored"]}